# LindahlCabinWebsite

./: .editorconfig  .swp  README.md  compose.yaml  fly.toml  server.code-workspace
.github/workflows/: LindahlCabinWebsite.code-workspace  cross-compile.yml
mongo/: Dockerfile  fly.toml
server/: Cargo.toml  Dockerfile  fly.toml
server/.github/workflows/: cross-compile.yml
server/src/: main.rs
server/src/auth/: authentication.rs  mod.rs
server/src/db/: .http  dbmessage.rs  dbuser.rs  dbvisit.rs  mod.rs
server/src/gql/: gql_schema.rs  resolver.rs  schema_resolver.rs
server/src/model/: mod.rs  modelmessage.rs  modeluser.rs  modelvisit.rs
src/auth/: authentication.rs
src/db/: dbvisit.rs
src/gql/: gql_schema.rs  mod.rs  resolver.rs  schema_resolver.rs
src/model/: modelpoll.rs  modeluser.rs
website/: .prettierrc  Dockerfile  fly.toml  next.config.mjs  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
website/app/: page.tsx
website/src/: App.tsx  app.d.ts  app.html  icons.d.ts
website/src/lib/: Calendar.svelte  CalendarComponent.svelte  DatePicker.svelte  DatePickerV2.svelte  GoogleSigninButton.svelte  MessageBoard.svelte  PollBooth.svelte  Utils.ts  index.ts
website/src/lib/client/: Schedule.svelte  VisitContainer.svelte  authStore.ts  calendarUtils.ts  serverComms.ts
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/(cabin)/: +layout.svelte  +page.svelte
website/src/routes/blog/: +page.svelte
website/src/routes/login/: +page.svelte
website/static/: styles.css
website/tests/: test.ts
(+6 files in other folders)
