[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.3.1"
async-graphql = "6.0.1"
async-graphql-actix-web = "6.0.1"
chrono = "0.4.31"
mongodb = "2.6.0"
serde = "1.0.183"
