[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = {version = "4.3.1", features = ["rustls-0_23"]}
rustls = "0.23"
rustls-pemfile = "2"
async-graphql = "6.0.1"
async-graphql-actix-web = "6.0.1"
chrono = "0.4.31"
jsonwebtoken = "9.2.0"
mongodb = {version = "2.6.0", features = ["bson-chrono-0_4"]}
rand = "0.8.5"
reqwest = {version = "0.11.23", features = ["json"]}
serde = "1.0.183"
